# pulseaudio-modules-nemo

./: configure.ac
debian/: changelog  control  libmeego-common-dev.install  pulseaudio-modules-nemo.install  rules
src/common/: Makefile.am
src/music/: Makefile.am
src/record/: Makefile.am
src/voice/: Makefile.am
